<resources>
    <string name="app_name">ham</string>
    <string name="action_settings">Settings</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="home">Home</string>
    <string name="exercises">Exercises</string>
    <string name="profile">Profile</string>
    <string name="completed_exercises">Completed Exercises</string>
    <string name="users">Users</string>
    <string name="username">username</string>
    <string name="name">Name</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="weight">Weight</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="device_id">Device Id</string>
    <string name="save_user">Save User</string>
    <string name="id">ID:</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="polar">Polar</string>
    <string name="battery">Battery:</string>
    <string name="activity">Activity: ---</string>
    <string name="heart_rate">Heart Rate</string>
    <string name="start_exercise">Start exercise</string>
    <string name="start">start</string>
    <string name="stop">stop</string>
    <string name="start_date">Start date</string>
    <string name="average_bpm">Average Bpm</string>
    <string name="duration">Duration</string>
    <string name="max_bpm">Max Bpm</string>
    <string name="calories_burned">Calories burned</string>
    <string name="delete_hr_data">delete hr data</string>
    <string name="delete">delete</string>

</resources>